--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "filament/infolists": "^3.2",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
+        "livewire/livewire": "^3.5",
         "maatwebsite/excel": "^3.1",
         "spatie/laravel-permission": "^6.9"
     },
