--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.5",
         "maatwebsite/excel": "^3.1",
+        "saade/filament-adjacency-list": "^3.2",
         "spatie/laravel-permission": "^6.9"
     },
     "require-dev": {
