--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         "althinect/filament-spatie-roles-permissions": "^2.2",
         "filament/filament": "3.2.57",
         "filament/infolists": "^3.2",
-        "filament/notifications": "^3.2",
+        "filament/notifications": "*",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.5",
