--- a/composer.json
+++ b/composer.json
@@ -7,9 +7,11 @@
     "require": {
         "php": "^8.2",
         "althinect/filament-spatie-roles-permissions": "^2.2",
+        "awcodes/filament-table-repeater": "^3.0",
         "filament/filament": "3.2.57",
         "filament/infolists": "^3.2",
         "filament/notifications": "*",
+        "icetalker/filament-table-repeater": "^1.3",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.5",
