--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.2",
         "althinect/filament-spatie-roles-permissions": "^2.2",
         "awcodes/filament-table-repeater": "^3.0",
+        "bezhansalleh/filament-shield": "^3.2",
         "filament/filament": "3.2.57",
         "filament/infolists": "^3.2",
         "filament/notifications": "*",
